<?xml version="1.0" encoding="utf-8"?>
<!--  Create Activity layout  -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/new_entry_diary_constr_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ui.createEntryDiary.CreateEntryDiary">

    <!--  Text View to show the text "Title of the activity"  -->

    <!--  Edit Text for input the title of the activity  -->

    <!-- Text View to show the text "About of the activity"  -->

    <!--  Edit Text for input the description of the activity  -->

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/title_entry_diary"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.575"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/activity_title"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:hint="@string/insert_title"
        android:inputType="textWebEditText"
        android:textSize="15sp"
        android:padding="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitle" />


    <TextView
        android:id="@+id/textAbout"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/about_today"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.212"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_title" />

    <EditText
        android:id="@+id/about_the_activity"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:hint="@string/insert_text"
        android:inputType="textWebEditText"
        android:textSize="15sp"
        android:padding="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.431"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAbout" />

    <TextView
        android:id="@+id/some_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="74dp"
        tools:layout_editor_absoluteY="463dp"
        android:visibility="invisible"/>

    <Spinner
        android:id="@+id/your_mood_today"
        android:layout_width="213dp"
        android:layout_height="wrap_content"
        android:entries="@array/choose_mood"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.741"
        />


    <Button
        android:id="@+id/btn_pickDate1"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:backgroundTint="@color/divider"
        android:text="@string/choose_date"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/img_date"
        app:layout_constraintTop_toBottomOf="@+id/about_the_activity"
        app:layout_constraintVertical_bias="0.432"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/tvDate1"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_below="@+id/btn_pickDate1"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.014"
        app:layout_constraintStart_toEndOf="@+id/btn_pickDate1"
        app:layout_constraintTop_toBottomOf="@+id/about_the_activity"
        app:layout_constraintVertical_bias="0.432"
        tools:text="@string/show_date" />

    <ImageButton
        android:id="@+id/img_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:backgroundTint="@color/white"
        android:src="@drawable/ic_baseline_event_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_create"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_the_activity"
        app:layout_constraintVertical_bias="0.438"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/btn_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primary"
        android:text="@string/add_new_entry"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_pickDate1"
        app:layout_constraintVertical_bias="0.958" />

</androidx.constraintlayout.widget.ConstraintLayout>